[package]
name = "aocf-boxes-2"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.2.1", features = ["cargo"] }
image = "0.24.6"
imageproc = "0.23.0"
ron = "0.8.0"
serde = "1.0.159"
